<resources>
    <string name="app_name">iWallic</string>
    <string name="welcome_enter">Enter iWallic</string>
    <string name="navigation_asset_title">Asset</string>
    <string name="navigation_transaction_title">Transaction</string>
    <string name="fragment_transaction_unconfirmed">Unconfirmed</string>
    <string name="navigation_find_title">Find</string>
    <string name="navigation_user_title">User</string>
    <string name="main_exit">Press again to exit</string>
    <string name="fragment_asset_title">Assets</string>
    <string name="fragment_transaction_title">Transactions</string>
    <string name="fragment_find_title">Find</string>
    <string name="fragment_user_title">User Center</string>
    <string name="fragment_user_setting">Settings</string>
    <string name="fragment_user_signout">Close wallet</string>
    <string name="fragment_user_backup">Backup wallet</string>
    <string name="fragment_user_support">Support</string>
    <string name="fragment_user_about">About</string>
    <string name="asset_manage">Assets manage</string>
    <string name="asset_manage_save">Save</string>
    <string name="asset_detail_claim_enter">Claim GAS (beta)</string>
    <string name="asset_detail_claim_collect">Collect</string>
    <string name="asset_detail_claim_claim">Claim</string>
    <string name="asset_detail_claim_cancel">Cancel</string>
    <string name="asset_detail_claim_un_claimed">Can claim: %1$s</string>
    <string name="asset_detail_claim_un_collect">Can collect: %1$s</string>
    <string name="asset_detail_claim_success">Claim is submitted, please wait for confirm</string>
    <string name="asset_detail_collect_success">Collection is submitted, please wait for confirm</string>
    <string name="asset_detail_collecting">Collecting</string>
    <string name="asset_detail_claiming">Claiming</string>
    <string name="user_setting_language">Language</string>
    <string name="user_setting_skin">Theme</string>
    <string name="user_setting_skin_default">Default</string>
    <string name="user_setting_skin_night">Dark</string>
    <string name="user_setting_save">Save</string>
    <string name="user_setting_net">Chain net</string>
    <string name="user_setting_net_main">Main net</string>
    <string name="user_setting_net_test">Test net</string>
    <string name="wallet_history_count">Contains %1$d address</string>
    <string name="wallet_import">Import wallet</string>
    <string name="wallet_create">Create wallet</string>
    <string name="wallet_create_password">Password</string>
    <string name="wallet_create_confirm">Confirm</string>
    <string name="wallet_create_tip">You need to set a cipher to keep your private key and transactions in safe. iWallic will never save your cipher, nor to help you find it back. So do keep it in mind.</string>
    <string name="wallet_create_tip_new">Here is your new wallet, you can backup it by save the WIF key or the wallet file(recommanded) now. When paying iWallic will ask for the cipher you just given to verify. Do protect your WIF key or wallet file.</string>
    <string name="wallet_create_confirm_hint">Confirm your password here</string>
    <string name="wallet_create_pwd_hint">Enter your password here</string>
    <string name="wallet_create_btn_create">Create wallet</string>
    <string name="wallet_create_btn_enter">Enter wallet</string>
    <string name="wallet_create_error_short">Need at least 6 characters.</string>
    <string name="wallet_create_error_mismatch">Two cipher inconsistencies.</string>
    <string name="wallet_create_new_title">Your WIF:</string>
    <string name="wallet_create_new_copy">Copy WIF</string>
    <string name="wallet_create_new_save">Save File</string>
    <string name="wallet_create_creating">Creating</string>
    <string name="wallet_import_importing">Opening</string>
    <string name="wallet_import_tip">Import your WIF key at this page, then set a password to protect it. Or directly choose your wallet file(iWallic support NEP-6 file).</string>
    <string name="wallet_import_wif">WIF key</string>
    <string name="wallet_import_password">Password</string>
    <string name="wallet_import_confirm">Confirm</string>
    <string name="wallet_import_wif_hint">Enter your WIF key</string>
    <string name="wallet_import_btn_wif">Import</string>
    <string name="wallet_import_btn_file">Import wallet file</string>
    <string name="wallet_import_error_wif">Invalid WIF key, please check</string>
    <string name="wallet_backup">Wallet backup</string>
    <string name="wallet_backup_copy">Copy WIF</string>
    <string name="wallet_backup_save">Export file</string>
    <string name="wallet_backup_gate">Verify first to show your WIF key.</string>
    <string name="wallet_backup_toggle">Your WIF</string>
    <string name="find_height">Local block height: %1$d</string>
    <string name="find_time">Generated at: %1$s</string>
    <string name="transaction_transfer">Transfer</string>
    <string name="transaction_transfer_chooseAsset">Asset</string>
    <string name="transaction_transfer_target_hint">Target</string>
    <string name="transaction_transfer_amount_hint">Amount</string>
    <string name="transaction_transfer_balance_hint">Balance: %1$s</string>
    <string name="transaction_transfer_btn_submit">Submit</string>
    <string name="transaction_transfer_tips_noChooseAsset_error">Please choose asset</string>
    <string name="transaction_transfer_tips_target_error">Address Error</string>
    <string name="transaction_transfer_tips_amount_error">Amount Error</string>
    <string name="transaction_transfer_tips_amount_unenough">Balance not enough</string>
    <string name="transaction_transfer_success">Submitted, please wait for confirm.</string>
    <string name="transaction_transfer_error_create">Generation failed</string>
    <string name="transaction_transfer_error_send">Transaction failed</string>
    <string name="transaction_transfer_error_rpc">Block net error</string>
    <string name="transaction_transfer_sending">Transferring</string>
    <string name="transaction_transfer_verifying">Verifying</string>
    <string name="transaction_receive">Receive</string>
    <string name="transaction_receive_address_copy">Copy Address</string>
    <string name="transaction_unconfirmed">Unconfirmed</string>
    <string name="transaction_transfer_scan_error">No address found</string>
    <string name="dialog_title_primary">Notice</string>
    <string name="dialog_title_warn">Warning</string>
    <string name="dialog_title_choose">Choose</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_ok_enter">Enter</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_content_signout">Sure to close current wallet?</string>
    <string name="dialog_content_noAsset">No Asset</string>
    <string name="dialog_content_nobalance">You do not own any asset currently, tap to go back.</string>
    <string name="dialog_content_addrdel">Sure to delete it? This can not be backspaced.</string>
    <string name="toast_refreshed">Refreshed!</string>
    <string name="dialog_version_ok">Update</string>
    <string name="dialog_version_new_body">Find new version for iWallic, update now?</string>
    <string name="load_load">Loading, please wait</string>
    <string name="wallet_create_dialog_enter">Have you backed up your new wallet and sure to enter?</string>
    <string name="dialog_password_title">Verify password</string>
    <string name="error_incoming">Coming soon!</string>
    <string name="error_failed">Operation failed</string>
    <string name="error_copied">Copied!</string>
    <string name="error_empty">Please fill inputs.</string>
    <string name="error_password">Password not match</string>
    <string name="error_timeout">Request timeout</string>
    <string name="error_request">Request failed</string>
    <string name="error_parse">Data parse error</string>
    <string name="error_server">Server error</string>
    <string name="error_scan_wif">No WIF key found</string>
    <string name="error_scan_address">No address found</string>
    <string name="error_claim_claim">No GAS to claim, please collect first if uncollected GAS exists</string>
    <string name="error_claim_collect">No GAS to collect</string>
    <string name="error_claim_claiming">Last claim has not completed yet</string>
    <string name="error_claim_collecting">Last collection has not completed yet</string>
    <string name="error_version_latest">Already the latest version</string>
    <string name="error_rpc">RPC servers are drunk, Please try later</string>
    <string name="transaction_transfer_error_rpc_timeout">Send tx to block timeout, it still may be confirmed later.</string>
    <string name="list_loadmore">load more</string>
    <string name="list_nomore">no more</string>
    <string name="list_loading">loading</string>
    <string name="activity_user_about_version">Current version</string>
    <string name="activity_user_about_disclaimer">Disclaimer</string>
    <string name="activity_user_support_wallet_guide">Wallet guide</string>
    <string name="activity_user_support_transaction_guide">Transaction guide</string>
    <string name="activity_user_support_blockchain_browser">Blockchain browser</string>
    <string name="activity_user_support_community">Community</string>
    <string name="activity_user_support_contact">Contact</string>
    <string name="activity_transaction_detail_title">My transaction</string>
    <string name="activity_transaction_detail_blockheight">Index</string>
    <string name="activity_transaction_detail_txid">Transaction hash</string>
    <string name="activity_transaction_detail_time">Time</string>
    <string name="activity_transaction_detail_from">Sent from</string>
    <string name="activity_transaction_detail_to">Sent to</string>
    <string name="adapter_tx_status_un">Unconfirmed</string>
    <string name="adapter_tx_status_no">Cancelled</string>

    <string name="adapter_pager_nomore">No more data here</string>

    <string name="version_updating">Updating</string>
    <string name="version_finishing">Completing</string>
    <string name="version_error">Failed</string>
    <string name="version_error_download">Download failed</string>
    <string name="version_error_unknown">Unknown error</string>
    <string name="version_error_permission">Permission error</string>
    <string name="app_notification_progress">Progress notify</string>
    <string name="app_notification_common">Common notify</string>
    <string name="transaction_receive_address">Your address</string>
    <string name="main_toggle_transfer">Transfer</string>
    <string name="main_toggle_receive">Receive</string>
    <string name="user_setting_language_system">System</string>

    <string name="version_title">Update exists</string>
    <string name="version_ok">Update</string>
    <string name="version_no">Skip</string>
    <string name="version_title_force">Important update</string>
    <string name="version_no_force">Not now</string>
    <string name="welcome_updating">Updating in background</string>
    <string name="nav_back">Back</string>
</resources>
