<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorDefault"
    tools:ignore="EllipsizeMaxLines,RtlHardcoded"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?colorPrimary">
        <View
            android:id="@+id/app_top_space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenStatusBar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenTopBar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fragment_user_title"
                android:textColor="?colorDefault"
                android:textSize="@dimen/dimenDefault"/>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorDefault"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/option_item_line_full"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_user_backup"
                    style="@style/option_item_rl">

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_backup"
                        style="@style/option_item_img"/>

                    <TextView
                        android:text="@string/fragment_user_backup"
                        style="@style/option_item_text"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_arrowright"
                        style="@style/option_item_imgarrow"/>
                </LinearLayout>

                <View
                    style="@style/option_item_line"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_user_setting"
                    style="@style/option_item_rl">

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_setting"
                        style="@style/option_item_img"/>

                    <TextView
                        android:text="@string/fragment_user_setting"
                        style="@style/option_item_text"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_arrowright"
                        style="@style/option_item_imgarrow"/>
                </LinearLayout>

                <View
                    style="@style/option_item_line"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_user_support"
                    style="@style/option_item_rl">

                    <ImageView
                        android:contentDescription="@null"
                        android:src="?drawableUserSupport"
                        style="@style/option_item_img"/>

                    <TextView
                        android:text="@string/fragment_user_support"
                        style="@style/option_item_text"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_arrowright"
                        style="@style/option_item_imgarrow"/>
                </LinearLayout>

                <View
                    style="@style/option_item_line"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_user_about"
                    style="@style/option_item_rl">

                    <ImageView
                        android:contentDescription="@null"
                        android:src="?drawableUserAbout"
                        style="@style/option_item_img"/>

                    <TextView
                        android:text="@string/fragment_user_about"
                        style="@style/option_item_text"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_arrowright"
                        style="@style/option_item_imgarrow"/>
                </LinearLayout>

                <View
                    style="@style/option_item_line"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_user_signout"
                    style="@style/option_item_rl">

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@drawable/icon_signout"
                        style="@style/option_item_img"/>

                    <TextView
                        android:text="@string/fragment_user_signout"
                        style="@style/option_item_text"
                        android:textColor="?colorDanger"/>
                </LinearLayout>
            </LinearLayout>

            <View style="@style/option_item_line_full"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>