<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorDefault"
    tools:ignore="EllipsizeMaxLines,RtlHardcoded"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".pages.transaction.TransactionDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary">
        <TextView
            android:id="@+id/transaction_detail_back"
            android:drawableStart="@drawable/icon_back"
            android:drawableTint="?colorDefault"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="@dimen/dimenSpace"
            android:paddingEnd="@dimen/dimenSpace"
            android:gravity="center"
            android:text="@string/activity_transaction_detail_title"
            android:textColor="?colorDefault"
            android:layout_gravity="center"
            android:textSize="@dimen/dimenFontL"
            tools:targetApi="m" />
    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/activity_transaction_detail_blockheight"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:textColor="?colorGrayL"
                android:textSize="@dimen/dimenFont"/>
            <TextView
                android:id="@+id/transaction_detail_txBlockIndex"
                android:textColor="?colorGrayL"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="@dimen/dimenFont"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">
            <TextView
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/activity_transaction_detail_txid"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:textColor="?colorGrayL"
                android:textSize="@dimen/dimenFont" />
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/transaction_detail_txid"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?colorGrayL"
                android:textSize="@dimen/dimenFont"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">
            <TextView
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/activity_transaction_detail_time"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:textColor="?colorGrayL"
                android:textSize="@dimen/dimenFont" />
            <TextView
                android:id="@+id/transaction_detail_txTime"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?colorGrayL"
                android:textSize="@dimen/dimenFont"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorLine"/>

        <ProgressBar
            android:id="@+id/transaction_detail_load"
            android:visibility="visible"
            android:layout_margin="@dimen/dimenSpace"
            android:foregroundTint="?colorPrimary"
            android:layout_width="@dimen/dimenLarge"
            android:layout_height="@dimen/dimenLarge"
            android:layout_gravity="center"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/transaction_detail_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_transaction_detail_from"
            android:padding="@dimen/dimenSpace"
            android:gravity="center"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/dimenFont"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimenSpace"
            android:id="@+id/transaction_detail_from_list">

        </LinearLayout>

        <TextView
            android:id="@+id/transaction_detail_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimenSpace"
            android:text="@string/activity_transaction_detail_to"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/dimenFont"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimenSpace"
            android:id="@+id/transaction_detail_to_list">
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
