<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.wallet.WalletImportActivity"
    android:background="?colorDefault2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:padding="@dimen/dimenSpace">
        <TextView
            android:id="@+id/wallet_import_back"
            android:drawableStart="@drawable/icon_back"
            android:drawableTint="?colorDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_import"
            android:textColor="?colorDefault"
            android:layout_gravity="center"
            android:textSize="@dimen/dimenFontL"
            tools:targetApi="m" />
    </RelativeLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableRefresh="false"
        app:srlEnableLoadMore="false"
        app:srlEnableOverScrollDrag="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimenSpace"
                    android:text="@string/wallet_import_tip"
                    android:background="?colorPrimary"
                    android:textColor="?colorDefault"
                    android:textSize="@dimen/dimenFontM"/>
                <LinearLayout
                    android:layout_marginTop="@dimen/dimenSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?colorDefault">
                    <EditText
                        android:id="@+id/wallet_import_wif"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:textSize="@dimen/dimenFont"
                        android:background="?colorDefault"
                        android:padding="@dimen/dimenSpace"
                        android:hint="@string/wallet_import_wif_hint"
                        android:textColorHint="?colorFont"
                        android:textColor="?colorFont"
                        android:focusedByDefault="true"
                        android:minLines="3"
                        android:gravity="top|start"
                        tools:targetApi="o" />
                    <ImageView
                        android:contentDescription="@null"
                        android:padding="@dimen/dimenMini"
                        android:id="@+id/wallet_import_scan"
                        android:layout_marginStart="@dimen/dimenSpace"
                        android:layout_marginEnd="@dimen/dimenSpace"
                        android:layout_width="@dimen/dimenLarge"
                        android:layout_height="@dimen/dimenLarge"
                        android:src="@drawable/icon_scan"
                        android:tint="?colorPrimary"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/wallet_import_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/dimenSpace"
                    android:inputType="textPassword"
                    android:background="?colorDefault"
                    android:textColorHint="?colorFont"
                    android:textSize="@dimen/dimenFont"
                    android:padding="@dimen/dimenSpace"
                    android:hint="@string/wallet_create_pwd_hint"
                    android:textColor="?colorFont"
                    android:focusedByDefault="true"
                    tools:targetApi="o" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimenLine"
                    android:background="?colorLine"/>

                <EditText
                    android:id="@+id/wallet_import_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/wallet_create_confirm_hint"
                    android:inputType="textPassword"
                    android:textColorHint="?colorFont"
                    android:padding="@dimen/dimenSpace"
                    android:textSize="@dimen/dimenFont"
                    android:background="?colorDefault"
                    android:textColor="?colorFont" />

                <TextView
                    android:id="@+id/wallet_import_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimenSpace"
                    android:paddingEnd="@dimen/dimenSpace"
                    android:paddingTop="@dimen/dimenSpace"
                    android:textColor="?colorDanger"
                    android:visibility="invisible"/>

                <FrameLayout
                    android:id="@+id/wallet_import_btn_wif"
                    android:layout_width="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/dimenSpace"
                    android:layout_marginEnd="@dimen/dimenSpace"
                    android:background="@drawable/shape_round_primary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:visibility="visible"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimenFont"
                        android:textColor="?colorDefault"
                        android:layout_gravity="center"
                        android:text="@string/wallet_import_btn_wif" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"/>
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </ScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>